package alertas;

public enum TipoDeAlerta {
  URGENTE, INFORMATIVA
}
