package domain.alertas;

public enum TipoDeReceptor {
  USUARIO, TODOS, NADIE
}
